Add :  feat : html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
     <title>Relogio</title>
 </head>
 <body>
-    
+    <div class="Relogio">
+        <div>
+            <span class="hr">00</span>
+            <span class="temp">Hours</span>
+        </div>
 
+        <div>
+            <span class="mn">00</span>
+            <span class="temp">Minutes</span>
+        </div>
 
-    
+        <div>
+            <span class="s">00</span>
+            <span class="temp">Seconds</span>
+        </div>
+    </div>
     <script src="assets/js/index.js"></script>
 </body>
 </html>
