add : style : html class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Relogio</title>
 </head>
 <body>
-    <div class="Relogio">
+    <div class="Clock">
         <div>
             <span class="hr">00</span>
             <span class="temp">Hours</span>
